Fix heart sand image

--- a/public/assets/manifest.yml
+++ b/public/assets/manifest.yml
@@ -1,5 +1,6 @@
 ---
-heart-sand.jpg: heart-sand-adaeff6d8807f7778ae6e54ed35ef7ae.jpg
+heart-sand.jpg: heart-sand-d2c7fe0c499050a68221f7b361af2e12.jpg
+roma-view.png: roma-view-5f3f7e0027fc5a266db3a89ffba82358.png
 application.js: application-2c26e0dd0701d7ab69f43d0fa4137263.js
 application.css: application-3142848bbdcb0302a28b4412d7a1ed97.css
 coffee-script.js: coffee-script-370926055597347f9ee4bce64d47d57b.js
